ops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3002
  selector:
    app: backend
