ops/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
spec:
  hosts:
    - "draw.kushan23.com"
  gateways:
    - ingress-gateway
  http:
    - match:
        - uri:
            prefix: /api  
      route:
        - destination:
            host: backend
            port:
              number: 80
